--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@ Desktop/
   } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
     video.src = 'https://lstn.lv/bbcradio.m3u8?station=bbc_radio_two&bitrate=320000';
   }
+
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+<video id="video" controls></video>
+<script>
+  if (Hls.isSupported()) {
+    var video = document.getElementById('video');
+    var hls = new Hls();
+    hls.loadSource('https://lstn.lv/bbcradio.m3u8?station=bbc_radio_two&bitrate=320000');
+    hls.attachMedia(video);
+  }
+</script>
 </script>
 </html>
 radio-hub/
